css/list.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/*RESETS*/
a{
    text-decoration: none;
}

li{
    list-style: none;
}

/*TITLES*/
h1{
    font-weight: 750;
}

/*COLORS*/
:root {
  --background: #edf8ff;
  --tarefas: #99d8ff;
  --main: #38b6ff;
  --check: #0095f1;
  --limpar: #ff7070;
  --limpar-shadowbox: #d10000;
  --titulo-degrade-1: #0069a6;
  --titulo-degrade-2: #00e8ff;
}

body{
    background-color: var(--background);
    min-height: 100vh;

    /*FONT*/
    font-family: "Elms Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 100;
    font-style: normal;
}


/*
___________________ H E A D E R ______________________
_____________________ ⬇ ⬇ ⬇ __________________________
*/

header{
    background-color: var(--main);
    padding: 0.9rem;
    position: fixed;
    top: 0;
    width: 100%;
}

header nav ul img{
    width: 30px;
    cursor: pointer;
}

header nav ul li {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    padding: 0.5rem;
    border-radius: 50%;
    transition: .2s ease;
}

header nav ul li:hover {
    transform: scale(1.05);
    background-color: var(--tarefas);
}

header nav ul li:active {
    transform: scale(0.95);
}

header nav ul{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
    padding: 0 30px 0 30px;
}

/*
_____________________ M A I N ________________________
_____________________ ⬇ ⬇ ⬇ __________________________
*/
main{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 110px;
    padding-bottom: 80px;
}

main .container{
    width: 75%;
    max-width: 500px;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

main .main-title-container{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
}

main .main-title-container h1 {
    font-size: 51px;
    text-align: justify;
    text-align-last: justify;
    font-weight: 900;

    background: linear-gradient(45deg, var(--titulo-degrade-1), var(--titulo-degrade-2));
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
}

@media (max-width: 375px){
    main .main-title-container h1{
        font-size: 40px;
    }
}

main .main-title-container img{
    width: 43px;
    height: 43px;
}

/*
___________ T A S K S ______________
_____________  ⬇  __________________
*/
main .tasks-container{
    background-color: var(--tarefas);
    border-radius: 22px;
    padding: 18px;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 1rem;
    box-shadow: 0 12px 0 0 var(--main);
    margin-bottom: 8px;
}

main .tasks-container .task.closed{
    background-color: white;
    box-shadow: 0 8px 0 0 rgb(214, 214, 214);
    border-radius: 22px;
    padding: 0 0 0 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    cursor: pointer;
    align-items: left;
    gap: 0px;
    transition: .3s ease;
    
}

main .tasks-container .task.opened{
    background-color: white;
    box-shadow: 0 8px 0 0 rgb(214, 214, 214);
    border-radius: 22px;
    padding: 0 0 0 0;
    display: flex;
    cursor: pointer;
    flex-direction: column;
    justify-content: center;
    align-items: left;
    gap: 10px;
    transition: .3s ease;
}

main .tasks-container .task .task-header{
    display: flex;
    max-width: 100%;
    background-color: var(--main);
    height: 40px;
    border-radius: 22px;
    justify-content: space-between;
    padding: 0 0 0 15px;
    color: white;
    align-items: center;
    font-size: 12px;
}

main .tasks-container .task .task-header .check-button {
    border-radius: 50%;
    background-color: var(--check);
    width: auto;   
    height: 100%; 
    padding: 3px;  
}

main .tasks-container .task .task-header .check-button:hover{
    background-color: #1da8ff;
}

main .tasks-container .task p.opened{
    margin-left: 12px;
    font-weight: 300;
    color: var(--main);
    font-size: 16px;
    transition: .3s ease;
}

main .tasks-container .task p.closed{
    margin-left: 12px;
    font-weight: 300;
    color: var(--main);
    font-size: 0px;
    transition: .3s ease;
}

main .tasks-container .task .description-button {
    height: 20px;
    width: 20px;
    margin-left: 47%;
}

main .button-icon-container button{
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 0.3rem;
}

main .button-icon-container img{
    width: 23px;
}

main .button{
    height: 50px;
    border-radius: 30px;
    width: 100%;
    letter-spacing: 6px;
    font-weight: 600;
    font-size: 18px;
    color: white;
    background-color: var(--limpar);
    border: none;
    box-shadow: 0 6px 0 0 var(--limpar-shadowbox);
}

main .button:hover{
    background-color: #f94b4b;
}

main .button:active{
    box-shadow: 0 0 0 0 transparent;
    transform: translateY(6px);
}

/*
___________________ F O O T E R ______________________
_____________________ ⬇ ⬇ ⬇ __________________________
*/
footer{
    position: fixed;
    left: 0%;
    bottom: 0%;
    width: 100%;
    font-weight: 300;
    padding: 8px;
    text-align: center;
    color: rgba(255, 255, 255, 0.8);
    background-color: var(--main);
}

